feat: build da aplicação
